# banko

./: .env  Cargo.toml  README.md  Rocket.toml  VIEWS.md
db/: banko.sqlite3
migrations/2020-11-16-191139_numbers/: up.sql
migrations/2020-11-16-192100_numbers/: up.sql
migrations/2020-11-16-203748_numbers/: up.sql
migrations/2020-12-03-195230_winner/: up.sql
migrations/2020-12-05-202811_winner/: down.sql  up.sql
src/: main.rs  schema.rs  statics.rs
templates/: base.html  macros.html
templates/pages/: 404.html  about.html  draw.html  error.html  root.html  winner.html  winners.html
