[package]
name = "banko"
version = "0.1.0"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.4"
tera = "0.11"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15.0"
rand = "0.7.3"
cute = "0.3.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_sqlite_pool"]
