[package]
name = "banko"
version = "0.1.0"
authors = ["LFalch <lucas@wasd.dk>", "Bjarke Sørensen <bs@wasd.dk>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_session = "0.2.1"
tera = "0.11"
lazy_static = "1"
lettre = { git = "https://github.com/lettre/lettre.git" }
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15.0"
rand = "0.7.3"
cute = "0.3.0"
chrono = "0.4.19"
dotenv_codegen = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_sqlite_pool"]
